--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,7 @@ dependencies {
     //library for pin number
     //  implementation 'com.github.GoodieBag:Pinview:v1.3'
     implementation 'com.alimuzaffar.lib:pinentryedittext:1.3.10'
+
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
 }
